--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,11 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "./index.js"
       }
     ]
   }
+
   
   
   
