--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,27 @@
 {
-    "version":2,
-    "build":[
-        {
-            "src":"*.js",
-            "use":"@vercel/node"
+    "version": 2,
+    "builds": [
+      {
+        "src": "server/index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build",
+          "buildCommand": "npm install && npm run build"
         }
+      }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
+    "routes": [
+      {
+        "src": "/api/.*",
+        "dest": "server/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "client/build/index.html"
+      }
     ]
-}
+  }
