made new change

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,11 @@
     ],
     "routes": [
       {
-        "src": "/.*",
+        "src": "/posts",
+        "dest": "./index.js"
+      },
+      {
+        "src": "/users",
         "dest": "./index.js"
       }
     ]
