--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
       {
-        "src": "./index.js",
-        "dest": "./routes/.*"
+        "src": "/Server/routes/posts.js",
+        "dest": "./index.js*"
       }
     ]
   }
